--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -351,8 +351,13 @@ Resources:
                   - 'app.wsgi_app = ProxyFix(app.wsgi_app)'
                   - ''
                   - '@app.route("/")'
-                  - 'def hello(name=None):'
+                  - 'def hello():'
                   - '    return render_template("hello.html", hostname=socket.getfqdn())'
+                  - ''
+                  - '@app.route("/square")'
+                  - 'def square(number=512):'
+                  - '    while True:'
+                  - '        number*number'
                   - ''
                   - 'if __name__ == "__main__":'
                   - '    app.run(host="0.0.0.0")'
