--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -239,6 +239,8 @@ Resources:
               gcc: []
               strace: []
               screen: []
+          sources:
+              /: !Sub "https://${BucketName}.s3.amazonaws.com/mybucket/onica-helloworld.tar.gz"
           files:
             /etc/cfn/cfn-hup.conf:
               content: !Join
@@ -609,7 +611,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.24'
+          - 'echo "Version 0.0.25'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
