--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -240,7 +240,7 @@ Resources:
               strace: []
               screen: []
           sources:
-              /: !Sub "https://s3.amazonaws.com/${BucketName}/onica-helloworld.tar.gz"
+              /: !Sub "https://s3.us-east-2.amazonaws.com/${BucketName}/onica-helloworld.tar.gz"
           files:
             /etc/cfn/cfn-hup.conf:
               content: !Join
@@ -611,7 +611,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.26'
+          - 'echo "Version 0.0.27'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
