Added docs of the onica test approach 2.

--- a/root/opt/onica-hello-world/onica.ini
+++ b/root/opt/onica-hello-world/onica.ini
@@ -3,12 +3,23 @@ module = wsgi
 
 master = true
 processes = 5
+need-app = true
 
-socket = /run/%n/onica.sock
-chmod-socket = 660
+pidfile = /var/run/%n/onica.pid
+socket = /var/run/%n/onica.sock
+# chmod-socket = 660
+# chown-socket = true
 vacuum = true
+
+# log-reopen = true
+# logto = /var/log/onica/onica.log
+# log-syslog = true
+
+# uid = nginx
+# gid = nginx
 
 die-on-term = true
 workdir = /opt/onica-hello-world
-processes = 4
-threads = 2
+processes = 8
+threads = 4
+# daemonize = true
