--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,15 +15,14 @@ phases:
     commands:
       - echo "Starting build `date` in `pwd`"
       - aws s3 cp onica-helloworld.tar.gz s3://$ROOTDIRBUCKET/
-      # - test -e app-sam.yaml && aws cloudformation package --template-file app-sam.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file app-output_sam.yaml
+      - test -e app-sam.yaml && aws cloudformation package --template-file app-sam.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file app-output_sam.yaml
       - aws cloudformation package --template-file approach1.cft.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file approach1.yaml
-      # - sed -i '/DefinitionUri/d' app-output_sam.yaml
-      - sed -i '/DefinitionUri/d' approach1.yaml
+      - sed -i '/DefinitionUri/d' approach1.yaml app-output_sam.yaml
       - echo "build completed on `date`"
 
 artifacts:
   files:
     - approach1.yaml
-    # - app-output_sam.yaml
+    - app-output_sam.yaml
     # - test-output_sam.yaml
   discard-paths: yes
