--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -97,7 +97,7 @@ Resources:
                     description: "200 response"
                     schema:
                       $ref: "#/definitions/Empty"
-                  uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ListEntries.Arn}/invocations
+                  uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${TestEntries.Arn}/invocations
                   passthroughBehavior: "when_no_match"
                   httpMethod: "POST"
                   contentHandling: "CONVERT_TO_TEXT"
@@ -116,7 +116,7 @@ Resources:
                     description: "200 response"
                     schema:
                       $ref: "#/definitions/Empty"
-                  uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DisplayEntry.Arn}/invocations
+                  uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${TestEntries.Arn}/invocations
                   passthroughBehavior: "when_no_match"
                   httpMethod: "POST"
                   contentHandling: "CONVERT_TO_TEXT"
