I don't need more than one api pipeline stage so dropping the export name on the apiurl output

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -126,4 +126,4 @@ Outputs:
     Description: URL for application
     Value: !Sub 'https://${APIGateway}.execute-api.${AWS::Region}.amazonaws.com/Stage'
     Export:
-      Name: !Sub 'ApiUrl-${Stage}'
+      Name: ApiUrl
