Removing the version cat in buildspec. adding the loggroup and retention of 30 days

--- a/app-sam.yaml
+++ b/app-sam.yaml
@@ -72,6 +72,11 @@ Resources:
           Properties:
             Path: "/id/{id_number}"
             Method: "GET"
+  TestEntriesLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      RetentionInDays: 30
+      LogGroupName: !Sub '/aws/lambda/${TestEntries}'
 Outputs:
   ApiUrl:
     Description: URL for application
